# diff-diff

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  METHODOLOGY_REVIEW.md  README.md  ROADMAP.md  TODO.md  pyproject.toml
.claude/: settings.json
.claude/commands/: ai-review-local.md  branch-cleanup.md  bump-version.md  dev-checklists.md  docs-check.md  docs-impact.md  paper-review.md  pre-merge-check.md  push-pr-update.md  review-plan.md  revise-plan.md  submit-pr.md  worktree-new.md  worktree-rm.md
.claude/hooks/: check-plan-review.sh  test-check-plan-review.sh
.claude/scripts/: openai_review.py
.github/workflows/: ai_pr_review.yml  notebooks.yml  publish.yml  rust-test.yml
benchmarks/: run_benchmarks.py
benchmarks/R/: benchmark_realdata_api.R  benchmark_realdata_nhanes.R  benchmark_realdata_recs.R  benchmark_survey_crossvalidation.R  benchmark_survey_estimators.R  benchmark_triplediff.R  benchmark_twfe.R  requirements.R
benchmarks/python/: benchmark_triple_diff.py  benchmark_twfe.py  benchmark_wooldridge.py
benchmarks/speed_review/: baseline_results.json  bench_callaway.py  validate_results.py
carousel/: generate_v27_pdf.py  generate_v3_carousel.py  generate_wooldridge_carousel.py
diff_diff/: __init__.py  _backend.py  bacon.py  bootstrap_utils.py  continuous_did.py  continuous_did_bspline.py  continuous_did_results.py  datasets.py  diagnostics.py  efficient_did.py  efficient_did_bootstrap.py  efficient_did_covariates.py  efficient_did_results.py  efficient_did_weights.py  estimators.py  honest_did.py  imputation.py  imputation_bootstrap.py  imputation_results.py  linalg.py  power.py  practitioner.py  prep.py  prep_dgp.py  results.py  stacked_did.py  stacked_did_results.py  staggered.py  staggered_aggregation.py  staggered_bootstrap.py  staggered_results.py  staggered_triple_diff.py  staggered_triple_diff_results.py  sun_abraham.py  survey.py  synthetic_did.py  triple_diff.py  trop.py  trop_global.py  trop_local.py  (+9 more)
diff_diff/visualization/: __init__.py  _common.py  _continuous.py  _diagnostic.py  _event_study.py  _power.py  _staggered.py  _synthetic.py
docs/: benchmarks.rst  business-strategy.md  choosing_estimator.rst  conf.py  doc-deps.yaml  index.rst  llms-full.txt  llms-practitioner.txt  llms.txt  practitioner-guide-evaluation.md  python_comparison.rst  quickstart.rst  r_comparison.rst  survey-roadmap.md  troubleshooting.rst
docs/_static/: custom.css
docs/_templates/: layout.html
docs/api/: bacon.rst  continuous_did.rst  efficient_did.rst  estimators.rst  honest_did.rst  index.rst  power.rst  prep.rst  (+5 more)
rust/: Cargo.toml
tests/: conftest.py  test_aliases.py  test_bootstrap_utils.py  test_continuous_did.py  test_diagnostics.py  test_doc_snippets.py  test_efficient_did.py  test_efficient_did_validation.py  test_estimators.py  test_honest_did.py  test_imputation.py  test_linalg.py  test_methodology_callaway.py  test_methodology_continuous_did.py  test_methodology_did.py  test_methodology_honest_did.py  test_methodology_sdid.py  test_methodology_staggered_triple_diff.py  test_methodology_triple_diff.py  test_methodology_twfe.py  test_openai_review.py  test_power.py  test_practitioner.py  test_prep.py  test_pretrends_event_study.py  test_replicate_weight_expansion.py  test_rust_backend.py  test_staggered.py  test_staggered_rc.py  test_staggered_triple_diff.py  test_sun_abraham.py  test_survey.py  test_survey_estimator_validation.py  test_survey_phase3.py  test_survey_phase4.py  test_survey_phase5.py  test_survey_phase6.py  test_survey_phase7a.py  test_survey_phase8.py  test_survey_r_crossvalidation.py  (+10 more)
(+34 files in other folders)
