[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "diff-diff"
version = "2.9.0"
description = "Difference-in-Differences causal inference with sklearn-like API. Callaway-Sant'Anna, Synthetic DiD, Honest DiD, event studies, parallel trends."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9,<3.14"
authors = [
    {name = "diff-diff contributors"}
]
keywords = [
    "causal-inference",
    "difference-in-differences",
    "econometrics",
    "statistics",
    "treatment-effects",
    "event-study",
    "staggered-adoption",
    "parallel-trends",
    "synthetic-control",
    "panel-data",
    "did",
    "twfe",
    "callaway-santanna",
    "honest-did",
    "sensitivity-analysis",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "maturin>=1.4,<2.0",
    "matplotlib>=3.5",
    "nbmake>=1.5",
    "plotly>=5.0",
]
plotly = [
    "plotly>=5.0",
]
docs = [
    "sphinx>=6.0",
    "pydata-sphinx-theme>=0.15",
    "sphinxext-opengraph>=0.9",
    "sphinx-sitemap>=2.5",
    "nbsphinx>=0.9",
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/igerber/diff-diff"
Documentation = "https://diff-diff.readthedocs.io"
Repository = "https://github.com/igerber/diff-diff"
Issues = "https://github.com/igerber/diff-diff/issues"
"Practitioner Guide" = "https://github.com/igerber/diff-diff/blob/main/docs/llms-practitioner.txt"

[tool.maturin]
# Build the Rust extension module
features = ["extension-module"]
# Python source is in the root directory
python-source = "."
# Module name for the compiled extension
module-name = "diff_diff._rust_backend"
# Path to Rust Cargo.toml
manifest-path = "rust/Cargo.toml"
# Include Python packages
python-packages = ["diff_diff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
# Exclude slow tests by default; use `pytest -m ''` to run all tests
addopts = "-v --tb=short -m 'not slow'"
markers = [
    "slow: marks tests as slow (run `pytest -m 'not slow'` to exclude, or `pytest -m slow` to run only slow tests)",
    "realdata: marks tests that validate against real survey datasets (API, NHANES, RECS)",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# Disable strict Optional checking since we use Optional types extensively
strict_optional = true
# Allow implicit re-exports for public API
implicit_reexport = true
# Disable errors for numpy type compatibility issues
disable_error_code = ["arg-type", "return-value", "var-annotated", "assignment"]
